se crea el git ignore para no subir cahe, los node modules y se crea enpoint de localidad y provincias
